# chord_calculator

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/core/: Cargo.toml  _rules.yaml  _rules_config.rs  lib.rs
crates/wasm/: Cargo.toml  lib.rs
frontend/: index.html  main.ts  utils.ts
frontend/wasm/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
